--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -10,6 +10,7 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
+RUN npm install express --save
 RUN npm install sequelize --save
 RUN npm install mysql2 --save
 RUN npm install ejs --save
