--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       context: node
     container_name: app
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    command: node index.js
     networks: 
       - node-network
     volumes: 
@@ -23,8 +24,6 @@ services:
     container_name: db
     restart: always
     tty: true
-    volumes: 
-      - ./mysql:/var/lib/mysql
     environment: 
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
