--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - node-network
     volumes: 
       - ./node:/usr/src/app
+      - /usr/src/app/node_modules
     tty: true
     ports: 
       - "5000:5000"
